Add plugin commands, events, and Gradle tooling